--- a/style.css
+++ b/style.css
@@ -1,10 +1,24 @@
 body{
     background-color: lightcyan;
+    font: courier;
+}
+
+title{
+    text-align:center;
+    color: green;
 }
 
 p{
     border: 1px solid;
     border-color: aquamarine;
     padding: 20px;
+}
 
+.button-class{
+    background-color: green;
+    color: white;
+    text-align: center;
+    display: inline-block;
+    border: 1px solid greenyellow
+    
 }
